Bug 1222226 - Don't return eRestyleResult_StopWithStyleChange if the old style context is shared. r=dbaron, a=lizzard

--HG--
extra : source : 0733342d8c56d4a4b1d5f87f8be0f535ef8e6d7a